@@ -29,7 +29,8 @@
 	applied a patch from samchuck at neowiz to the sqlrclient protocol
 		module to deallocate storage for bind variables after logging
 		the query to resolve a reference-after-free bug
-	added router module framework and "regex" module
+	added router module framework with "regex", "userlist" and
+		"clientiplist" modules
 
 0.65.0 - removed erroneous SQLR_SQLExecute export in ODBC driver
 	fixed call type of internal ODBC driver functions and made them static
